--enable-preview added in JVM args